Backport to mc1.20.1b