@@ -28,23 +28,19 @@ import dev.terminalmc.chatnotify.gui.widget.field.FakeTextField;
 import dev.terminalmc.chatnotify.gui.widget.field.MultiLineTextField;
 import dev.terminalmc.chatnotify.gui.widget.field.TextField;
 import dev.terminalmc.chatnotify.mixin.accessor.KeyAccessor;
-import dev.terminalmc.chatnotify.util.ColorUtil;
 import dev.terminalmc.chatnotify.util.Functional;
 import net.minecraft.ChatFormatting;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.Font;
 import net.minecraft.client.gui.components.*;
 import net.minecraft.client.gui.components.Button;
-import net.minecraft.network.chat.CommonComponents;
+import net.minecraft.network.chat.*;
 import net.minecraft.network.chat.Component;
-import net.minecraft.network.chat.MutableComponent;
-import net.minecraft.network.chat.TextColor;
 import net.minecraft.util.FastColor;
 import net.minecraft.util.StringUtil;
 import org.jetbrains.annotations.Nullable;
 
 import java.awt.*;
-import java.time.Duration;
 import java.util.*;
 import java.util.List;
 import java.util.function.BiFunction;
@@ -68,7 +64,7 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
     private final EntrySupplier<E> entrySupplier;
     private final @Nullable TrailerSupplier<E> trailerSupplier;
 
-    public FilterList(Minecraft mc, OptionScreen screen, int width, int height, int y,
+    public FilterList(Minecraft mc, OptionScreen screen, int width, int height, int top, int bottom,
                       int entryWidth, int entryHeight, int entrySpacing,
                       Class<? extends Entry.ListEntry> entryClass,
                       BiFunction<Integer, Integer, Boolean> moveFunction,
@@ -82,7 +78,7 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
                       @Nullable TrailerSupplier<E> trailerSupplier,
                       Runnable addRunnable
     ) {
-        super(mc, screen, width, height, y, entryWidth, entryHeight, entrySpacing,
+        super(mc, screen, width, height, top, bottom, entryWidth, entryHeight, entrySpacing,
                 new HashMap<>(Map.of(entryClass, moveFunction)));
         this.tabNameUpdate = tabNameUpdate;
         this.title = title;
@@ -147,7 +143,7 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
             }
         }
         tabNameUpdate.run();
-        clampScrollAmount();
+        setScrollAmount(getScrollAmount());
     }
 
     @FunctionalInterface
@@ -258,7 +254,7 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
                 elements.add(indicatorButton);
 
                 // Drag reorder button
-                Button dragButton = Button.builder(Component.literal("↑↓"),
+                Button dragButton = Button.builder(Component.literal("\u2191\u2193"),
                                 (button) -> {
                                     this.setDragging(true);
                                     list.startDragging(this, StyleTargetOptions.class,
@@ -283,12 +279,12 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
                                     trigger.type = type;
                                     list.init();
                                 });
-                typeButton.setTooltipDelay(Duration.ofMillis(500));
+                typeButton.setTooltipDelay(500);
                 elements.add(typeButton);
                 movingX += list.tinyWidgetWidth;
 
                 // Trigger editor button
-                Button editorButton = Button.builder(Component.literal("✎"),
+                Button editorButton = Button.builder(Component.literal("\u270e"),
                                 (button) -> mc.setScreen(new TriggerScreen(
                                         mc.screen, trigger, textStyle, () -> {},
                                         TriggerScreen.TabKey.TRIGGER_EDITOR.key)))
@@ -297,7 +293,7 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
                         .build();
                 editorButton.setTooltip(Tooltip.create(localized(
                         "option", "notif.trigger.open.trigger_editor.tooltip")));
-                editorButton.setTooltipDelay(Duration.ofMillis(500));
+                editorButton.setTooltipDelay(500);
                 elements.add(editorButton);
                 movingX += list.tinyWidgetWidth;
 
@@ -325,7 +321,7 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
                     if (!trigger.styleTarget.enabled) {
                         styleButton.setTooltip(Tooltip.create(localized(
                                 "option", "notif.trigger.style_target.add.tooltip")));
-                        styleButton.setTooltipDelay(Duration.ofMillis(500));
+                        styleButton.setTooltipDelay(500);
                     } else {
                         styleButton.active = false;
                     }
@@ -334,7 +330,7 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
 
                 // Delete button
                 elements.add(Button.builder(
-                                Component.literal("❌").withStyle(ChatFormatting.RED),
+                                Component.literal("\u274C").withStyle(ChatFormatting.RED),
                                 (button) -> {
                                     removeFunction.accept(index);
                                     list.init();
@@ -360,7 +356,7 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
                 TextField displayField = new TextField(x, 0, width, height);
                 displayField.setValue(trigger.string);
                 displayField.setTooltip(Tooltip.create(tooltip));
-                displayField.setTooltipDelay(Duration.ofMillis(500));
+                displayField.setTooltipDelay(500);
                 displayField.setEditable(false);
                 displayField.active = false;
                 elements.add(displayField);
@@ -384,11 +380,11 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
 
                 // Info icon
                 StringWidget infoIcon = new StringWidget(movingX, 0, list.tinyWidgetWidth, height,
-                        Component.literal("ℹ"), Minecraft.getInstance().font);
+                        Component.literal("\u2139"), Minecraft.getInstance().font);
                 infoIcon.alignCenter();
                 infoIcon.setTooltip(Tooltip.create(localized(
                         "option", "notif.trigger.style_target.tooltip")));
-                infoIcon.setTooltipDelay(Duration.ofMillis(500));
+                infoIcon.setTooltipDelay(500);
                 elements.add(infoIcon);
                 movingX += list.tinyWidgetWidth;
 
@@ -405,7 +401,7 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
                                     styleTarget.type = type;
                                     list.init();
                                 });
-                typeButton.setTooltipDelay(Duration.ofMillis(500));
+                typeButton.setTooltipDelay(500);
                 elements.add(typeButton);
                 movingX += list.tinyWidgetWidth;
 
@@ -421,7 +417,7 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
 
                 // Delete button
                 elements.add(Button.builder(
-                                Component.literal("❌").withStyle(ChatFormatting.RED),
+                                Component.literal("\u274C").withStyle(ChatFormatting.RED),
                                 (button) -> {
                                     styleTarget.enabled = false;
                                     list.init();
@@ -452,7 +448,7 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
                 int movingX = x;
 
                 // Drag reorder button
-                elements.add(Button.builder(Component.literal("↑↓"),
+                elements.add(Button.builder(Component.literal("\u2191\u2193"),
                                 (button) -> {
                                     this.setDragging(true);
                                     list.startDragging(this, null, false);
@@ -474,7 +470,7 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
                                     message.type = type;
                                     list.init();
                                 });
-                typeButton.setTooltipDelay(Duration.ofMillis(500));
+                typeButton.setTooltipDelay(500);
                 elements.add(typeButton);
                 movingX += list.tinyWidgetWidth + fieldSpacing;
 
@@ -486,7 +482,7 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
                                 int wHeight = Math.max(DropdownTextField.MIN_HEIGHT, list.height);
                                 int wWidth = Math.max(DropdownTextField.MIN_WIDTH, list.dynWideEntryWidth);
                                 int wX = x + (width / 2) - (wWidth / 2);
-                                int wY = list.getY();
+                                int wY = list.y0;
                                 list.screen.setOverlayWidget(new DropdownTextField(
                                         wX, wY, wWidth, wHeight, Component.empty(),
                                         () -> message.string.matches(".+-.+")
@@ -513,7 +509,7 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
                                 int wHeight = Math.max(DropdownTextField.MIN_HEIGHT, list.height);
                                 int wWidth = Math.max(DropdownTextField.MIN_WIDTH, list.dynWideEntryWidth);
                                 int wX = x + (width / 2) - (wWidth / 2);
-                                int wY = list.getY();
+                                int wY = list.y0;
                                 list.screen.setOverlayWidget(new DropdownTextField(
                                         wX, wY, wWidth, wHeight, Component.empty(),
                                         () -> message.string.matches(".+-.+")
@@ -551,7 +547,7 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
                 timeField.posIntValidator().strict();
                 timeField.setTooltip(Tooltip.create(localized(
                         "option", "notif.response.time.tooltip")));
-                timeField.setTooltipDelay(Duration.ofMillis(500));
+                timeField.setTooltipDelay(500);
                 timeField.setMaxLength(5);
                 timeField.setResponder((s) -> message.delayTicks = Integer.parseInt(s.strip()));
                 timeField.setValue(String.valueOf(message.delayTicks));
@@ -559,7 +555,7 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
 
                 // Delete button
                 elements.add(Button.builder(
-                                Component.literal("❌").withStyle(ChatFormatting.RED),
+                                Component.literal("\u274C").withStyle(ChatFormatting.RED),
                                 (button) -> {
                                     removeFunction.accept(index);
                                     list.init();
@@ -587,7 +583,7 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
                 Minecraft mc = Minecraft.getInstance();
 
                 @Nullable Trigger trigger = notif.triggers.size() == 1
-                        ? notif.triggers.getFirst() : null;
+                        ? notif.triggers.get(0) : null;
                 boolean singleTrig = trigger != null;
 
                 int statusButtonWidth = 24;
@@ -663,7 +659,7 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
                     elements.add(indicatorButton);
 
                     // Drag reorder button (left-side extension)
-                    Button dragButton = Button.builder(Component.literal("↑↓"),
+                    Button dragButton = Button.builder(Component.literal("\u2191\u2193"),
                                     (button) -> {
                                         this.setDragging(true);
                                         list.startDragging(this, null, false);
@@ -689,7 +685,7 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
                                         trigger.type = type;
                                         list.init();
                                     });
-                    typeButton.setTooltipDelay(Duration.ofMillis(200));
+                    typeButton.setTooltipDelay(200);
                     elements.add(typeButton);
                     movingX += list.tinyWidgetWidth;
 
@@ -707,7 +703,7 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
                             .build();
                     editorButton.setTooltip(Tooltip.create(localized(
                             "option", "notif.trigger.open.trigger_editor.tooltip")));
-                    editorButton.setTooltipDelay(Duration.ofMillis(200));
+                    editorButton.setTooltipDelay(200);
                     elements.add(editorButton);
                     movingX += list.tinyWidgetWidth;
                 }
@@ -735,11 +731,11 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
                 // Options button
 
                 ImageButton editButton = new ImageButton(movingX, 0,
-                        list.smallWidgetWidth, height, OPTION_SPRITES,
+                        list.smallWidgetWidth, height, 0, 0, 20, OPTIONS_ICON, 32, 64,
                         (button) -> mc.setScreen(new NotifScreen(mc.screen, notif)));
                 editButton.setTooltip(Tooltip.create(localized(
                         "option", "notif.open.options.tooltip")));
-                editButton.setTooltipDelay(Duration.ofMillis(200));
+                editButton.setTooltipDelay(200);
                 elements.add(editButton);
                 movingX += list.smallWidgetWidth + SPACE_SMALL;
 
@@ -747,10 +743,8 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
 
                 RightClickableButton colorEditButton = new RightClickableButton(
                         movingX, 0, list.tinyWidgetWidth, height,
-                        Component.literal("\uD83C\uDF22").withColor(notif.textStyle.doColor
-                                ? notif.textStyle.color
-                                : 0xffffff
-                        ), (button) -> {
+                        Component.literal("\uD83C\uDF22").withStyle(Style.EMPTY.withColor(
+                                notif.textStyle.doColor ? notif.textStyle.color : 0xffffff)), (button) -> {
                     // Open color picker overlay widget
                     int cpHeight = HsvColorPicker.MIN_HEIGHT;
                     int cpWidth = HsvColorPicker.MIN_WIDTH;
@@ -771,13 +765,13 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
                                 + (notif.textStyle.doColor ? "enabled" : "disabled"))
                         .append("\n")
                         .append(localized("option", "notif.click_edit"))));
-                colorEditButton.setTooltipDelay(Duration.ofMillis(200));
+                colorEditButton.setTooltipDelay(200);
                 if (showColorField) {
                     TextField colorField = new TextField(movingX, 0, minFieldWidth, height);
                     colorField.hexColorValidator().strict();
                     colorField.setMaxLength(7);
                     colorField.setResponder((val) -> {
-                        TextColor textColor = ColorUtil.parseColor(val);
+                        TextColor textColor = TextColor.parseColor(val);
                         if (textColor != null) {
                             int color = textColor.getValue();
                             notif.textStyle.color = color;
@@ -789,13 +783,13 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
                             else colorField.setTextColor(color);
                             // Update status button color
                             colorEditButton.setMessage(
-                                    colorEditButton.getMessage().copy().withColor(color));
+                                    colorEditButton.getMessage().copy().withStyle(Style.EMPTY.withColor(color)));
                         }
                     });
                     colorField.setValue(TextColor.fromRgb(notif.textStyle.color).formatValue());
                     colorField.setTooltip(Tooltip.create(localized(
                             "option", "notif.color.field.tooltip")));
-                    colorField.setTooltipDelay(Duration.ofMillis(500));
+                    colorField.setTooltipDelay(500);
                     elements.add(colorField);
                     movingX += minFieldWidth;
                 }
@@ -813,7 +807,7 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
                     soundField.setValue(notif.sound.getId());
                     soundField.setTooltip(Tooltip.create(localized(
                             "option", "notif.sound.field.tooltip")));
-                    soundField.setTooltipDelay(Duration.ofMillis(500));
+                    soundField.setTooltipDelay(500);
                     elements.add(soundField);
                     movingX += soundFieldWidth;
                 }
@@ -833,7 +827,7 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
                                 + (notif.sound.isEnabled() ? "enabled" : "disabled"))
                         .append("\n")
                         .append(localized("option", "notif.click_edit"))));
-                soundEditButton.setTooltipDelay(Duration.ofMillis(200));
+                soundEditButton.setTooltipDelay(200);
                 elements.add(soundEditButton);
 
                 // On/off button
@@ -854,8 +848,8 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
                     elements.add(new ConfirmButton(
                             x + width + SPACE, 0,
                             list.smallWidgetWidth, height,
-                            Component.literal("❌"),
-                            Component.literal("❌").withStyle(ChatFormatting.RED),
+                            Component.literal("\u274C"),
+                            Component.literal("\u274C").withStyle(ChatFormatting.RED),
                             (button) -> {
                                 if (Config.get().removeNotif(index)) {
                                     list.init();
@@ -874,7 +868,7 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
                 String plusNumFormat = " [+%d]";
                 Pattern plusNumPattern = Pattern.compile(" \\[\\+\\d+]");
 
-                if (notif.triggers.isEmpty() || notif.triggers.getFirst().string.isBlank()) {
+                if (notif.triggers.isEmpty() || notif.triggers.get(0).string.isBlank()) {
                     label = Component.literal("> ").withStyle(ChatFormatting.YELLOW).append(
                             localized("option", "notif.label.configure")
                                     .withStyle(ChatFormatting.WHITE)).append(" <");
@@ -904,11 +898,11 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
                     while(font.width(compileLabel(strList)) > maxWidth
                             && (strList.size() != 1
                             && !(strList.size() == 2
-                            && plusNumPattern.matcher(strList.getLast()).matches()))
+                            && plusNumPattern.matcher(strList.get(strList.size() - 1)).matches()))
                     ) {
                         // Remove the number (if any) and the last trigger
-                        if (plusNumPattern.matcher(strList.removeLast()).matches()) {
-                            strList.removeLast();
+                        if (plusNumPattern.matcher(strList.remove(strList.size() - 1)).matches()) {
+                            strList.remove(strList.size() - 1);
                         }
                         // Add the new number
                         strList.add(String.format(plusNumFormat,
@@ -918,14 +912,14 @@ public class FilterList<E extends Functional.StringSupplier> extends DragReorder
                     // Only one trigger (and possibly a number indicator)
                     // but if the first trigger is too long we trim it
                     while(font.width(compileLabel(strList)) > maxWidth) {
-                        String str = strList.getFirst();
+                        String str = strList.get(0);
                         if (str.length() < 3) break;
                         strList.set(0, str.substring(0, str.length() - 5) + " ...");
                     }
 
                     label = Component.literal(compileLabel(strList));
                     if (notif.textStyle.isEnabled()) {
-                        label.withColor(notif.textStyle.color);
+                        label.withStyle(label.getStyle().withColor(notif.textStyle.color));
                     }
                 }
                 return label;
